# screenercli

./: .gitignore  README.md  pyproject.toml  requirements.txt  screener_prompt.md  screener_result.md
.github/workflows/: publish.yml
screener_cli/: __init__.py  cli.py  models.py  scraper.py
screener_cli/formatters/: __init__.py  json_fmt.py  text_fmt.py
screener_cli/parsers/: __init__.py  balance_sheet.py  cash_flow.py  peers.py  profit_loss.py  pros_cons.py  quarterly.py  ratios.py  shareholding.py  utils.py
